--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -201,35 +201,25 @@
 
 
     <!-- MODULE 3 -->
-    <h3 class="module-titre">MODULE 3 — Comment développer sa vigilance</h3>
-    <p class="module-soustitre">Quand l’attaque vise nos émotions, pas nos ordinateurs</p>
+    <h3 class="module-titre">MODULE 3 — Comment développer sa vigilance et adopter de bonnes pratiques</h3>
 
     <p>
-      L’ingénierie sociale regroupe toutes les techniques de manipulation utilisées par un attaquant pour obtenir
-      ce qu’il veut&nbsp;: informations, accès, actions impulsives, transferts d’argent…
+      Le troisième et dernier module nous permettra d'aborder différents themes pour vous aider à développer votre propre système d’alerte mental, un mélange d’intuition,
+      d’expérience, et de prudence naturelle. Nous évoquerons aussi l'usage d'outils divers pour vous aider à vous proteger.
     </p>
 
-    <p>Dans ce module, les participants découvrent&nbsp;:</p>
-    <ul>
-      <li>Les biais psychologiques exploités en cybercriminalité</li>
-      <li>Les techniques classiques&nbsp;: urgence, autorité, confiance, curiosité, peur</li>
-      <li>Les conversations manipulatrices et scénarios typiques</li>
-      <li>Faux techniciens, faux support Microsoft, fraude au président</li>
-      <li>L’importance de la double vérification</li>
-      <li>Comment dire «&nbsp;non&nbsp;» sans gêne ni culpabilité</li>
-      <li>Jeu de rôle simplifié&nbsp;: reconnaître une tentative de manipulation</li>
-    </ul>
-
-    <p><strong>Objectif&nbsp;:</strong> développer des réflexes mentaux qui permettent d’interrompre la manipulation.</p>
+    <p>Dans ce module, les participants découvriront une liste non exhaustive de bonnes pratiques à intégrer à leur quotidien, 
+      afin de répondre efficacement aux problématiques couvertes lors du module précédent. 
+      Le cours se terminera par une séance de questions libres, où chacun sera invité à faire part de ses préoccupations et questionnements.&nbsp;:</p>
 
     <!-- Encadré : Approche pédagogique -->
     <div class="encadre">
       <h3>💬 Une formation axée sur l’échange et la participation</h3>
       <p>Au-delà des contenus, cette formation repose sur trois piliers pédagogiques&nbsp;:</p>
       <ol>
-        <li><strong>Une présentation claire et accessible</strong><br>Sans jargon. Sans surcharge technique. Juste ce qu’il faut pour comprendre.</li>
-        <li><strong>Des mises en situation et des jeux</strong><br>Parce qu’on retient mieux ce que l’on vit que ce que l’on lit.</li>
-        <li><strong>Un espace de discussion</strong><br>Les participants partagent leurs expériences, leurs peurs, leurs questions. C’est ce qui crée une véritable culture de cybersécurité dans une équipe.</li>
+        <li><strong>Une présentation claire et accessible</strong><br>Pas de vocabulaire technique. Juste ce qu’il faut pour présenter les concepts aussi simplement que possible.</li>
+        <li><strong>Des mises en situation et des jeux</strong><br>Idéal pour comprendre comment détecter les pièges les plus courants.</li>
+        <li><strong>Un espace de discussion</strong><br>La cybersécurité est un état d'esprit. Les participants le renforcent en partageant leurs expériences et leurs questions.</li>
       </ol>
     </div>
 
@@ -249,7 +239,7 @@
     <ul>
       <li>Format flexible de 60 à 120 minutes</li>
       <li>En présentiel ou en visioconférence</li>
-      <li>Adapté aux groupes de toutes tailles</li>
+      <li>Adapté aux groupes de 5-6 personnes</li>
     </ul>
 
     <!-- Résultats attendus -->
@@ -259,11 +249,10 @@
       <ul>
         <li>Identifient plus facilement les tentatives de hameçonnage</li>
         <li>Comprennent comment les attaquants manipulent les émotions</li>
-        <li>Savent protéger leurs comptes et leurs appareils</li>
-        <li>Développent une vigilance naturelle, rationnelle et durable</li>
-        <li>Participent à la sécurité numérique de leur organisation</li>
+        <li>Développent une vigilance naturelle</li>
+        <li>Participent à la sécurité numérique de leur organisation et de leur domicile</li>
       </ul>
-      <p><strong>En un mot&nbsp;:</strong> ils deviennent la première ligne de défense.</p>
+      <p><strong>En un mot&nbsp;:</strong> ils deviennent votre première ligne de défense contre les cybercriminels.</p>
     </div>
 
   </section>
