--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -130,7 +130,7 @@
 
     <p style="font-size:1.05em; line-height:1.7;">
       La cybersécurité n’est plus, depuis plusieurs années, un sujet exclusivement réservé aux salons et conférences d'experts. En 2025, les menaces se sont plus que jamais professionnalisées,
-      automatisées et industrialisées. Les PME, les particuliers, les organisations publiques comme privées sont ciblés quotidiennement
+      automatisées et industrialisées. Les PME, les particuliers, les organisations publiques comme privées sont ciblées quotidiennement
       par des attaques de plus en plus sophistiquées, amplifiées par un recours massif à l’intelligence artificielle.
     </p>
 
@@ -142,18 +142,18 @@
 
     <!-- Encadré : Objectifs de la formation -->
     <div class="encadre">
-      <h3>🎯 Objectifs de la formation</h3>
+      <h3> Objectifs de la formation</h3>
       <ul>
         <li>Faire un état des lieux des menaces cyber en 2025</li>
-        <li>Détecter les signes de hameçonnage et les arnaques courantes</li>
+        <li>Détecter les signes de hameçonnage et des pièges les plus courants</li>
         <li>Reconnaître les manipulations psychologiques utilisées par les cybercriminels</li>
-        <li>Adopter des pratiques simples et efficaces pour se protéger</li>
         <li>Développer des réflexes de vigilance adaptés à la vie personnelle et professionnelle</li>
+        <li>Adopter des pratiques simples et efficaces pour se protéger</li>
         <li>Favoriser le partage d’expérience et la prise de conscience collective au sein d’une équipe</li>
       </ul>
     </div>
 
-    <h3>🧩 Structure de la formation</h3>
+    <h3> Structure de la formation</h3>
     <p>
       La formation est divisée en trois modules, conçus pour un public non technique, sous forme de présentations courtes, de discussions libres, de mises en situation et de mini-jeux.
     </p>
@@ -214,7 +214,7 @@
 
     <!-- Encadré : Approche pédagogique -->
     <div class="encadre">
-      <h3>💬 Une formation axée sur l’échange et la participation</h3>
+      <h3> Une formation axée sur l’échange et la participation</h3>
       <p>Au-delà des contenus, cette formation repose sur trois piliers pédagogiques&nbsp;:</p>
       <ol>
         <li><strong>Une présentation claire et accessible</strong><br>Pas de vocabulaire technique. Juste ce qu’il faut pour présenter les concepts aussi simplement que possible.</li>
@@ -235,7 +235,7 @@
     </ul>
 
     <!-- Durée & format -->
-    <h3>📏 Durée &amp; format</h3>
+    <h3> Durée &amp; format</h3>
     <ul>
       <li>Format flexible de 60 à 120 minutes</li>
       <li>En présentiel ou en visioconférence</li>
@@ -244,7 +244,7 @@
 
     <!-- Résultats attendus -->
     <div class="encadre">
-      <h3>📦 Résultats attendus</h3>
+      <h3> Résultats attendus</h3>
       <p>À la fin de la formation, les participants&nbsp;:</p>
       <ul>
         <li>Identifient plus facilement les tentatives de hameçonnage</li>
