--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -159,11 +159,11 @@
     </p>
 
     <!-- MODULE 1 -->
-    <h3 class="module-titre">MODULE 1 — Etat des lieux en 2025: acteurs et enjeux de la cybersécurité </h3>
+    <h3 class="module-titre">MODULE 1 — Etat des lieux: acteurs et enjeux de la cybersécurité en 2025</h3>
 
-    <p>Dans cette première partie, nous dressons un portrait des menaces actuelles et des acteurs en présence.&nbsp;:</p>
+    <p>Dans cette première partie, nous dressons un portrait des menaces et des acteurs en présence&nbsp;:</p>
     <ul>
-      <li>L'état des menaces en 2025 en quelques chiffres</li>
+      <li>L'état des menaces en quelques chiffres</li>
       <li>Pourquoi sommes-nous tous concernés?</li>
       <li>Qui sont les acteurs en présence?</li>
       <li>Qu'est-ce qu'un hacker?</li>
@@ -178,13 +178,13 @@
     <p>
       Le second module s'intéresse en détail aux différentes techniques de hameçonnage, première porte d’entrée des cyberattaques. 
       Il vous permettra d'analyser plusieurs cas, et de tester vos connaissances à l'occasion d'un quizz. 
-      L'objectif de cette section est simple: vous convaincre de la nécéssité d'analyser et de toujours réfléchir avant de cliquer.
+      L'objectif de cette section est simple: vous sensibiliser sur les conséquences de vos actions en ligne, et vous inviter à toujours réfléchir avant de cliquer.
     </p>
 
     <p>Dans ce module interactif, nous aborderons les points suivants&nbsp;:</p>
     <ul>
       <li>
-        Présentation des différents types de hameconnage&nbsp;:
+        Présentation des différents types de hameçonnage&nbsp;:
         <ul>
           <li>Email trompeur (phishing)</li>
           <li>SMS/messagerie (smishing)</li>
@@ -204,22 +204,22 @@
     <h3 class="module-titre">MODULE 3 — Comment développer sa vigilance et adopter de bonnes pratiques</h3>
 
     <p>
-      Le troisième et dernier module nous permettra d'aborder différents themes pour vous aider à développer votre propre système d’alerte mental, un mélange d’intuition,
+      Le troisième et dernier module nous permettra d'aborder différents thèmes pour vous aider à développer votre propre système d’alerte mental, un mélange d’intuition,
       d’expérience, et de prudence naturelle. Nous évoquerons aussi l'usage d'outils divers pour vous aider à vous proteger.
     </p>
 
     <p>Dans ce module, les participants découvriront une liste non exhaustive de bonnes pratiques à intégrer à leur quotidien, 
       afin de répondre efficacement aux problématiques couvertes lors du module précédent. 
-      Le cours se terminera par une séance de questions libres, où chacun sera invité à faire part de ses préoccupations et questionnements.&nbsp;:</p>
+      Le cours se terminera par une séance de questions libres, où chacun sera invité à faire part de ses préoccupations et questionnements.&nbsp;</p>
 
     <!-- Encadré : Approche pédagogique -->
     <div class="encadre">
       <h3> Une formation axée sur l’échange et la participation</h3>
       <p>Au-delà des contenus, cette formation repose sur trois piliers pédagogiques&nbsp;:</p>
       <ol>
-        <li><strong>Une présentation claire et accessible</strong><br>Pas de vocabulaire technique. Juste ce qu’il faut pour présenter les concepts aussi simplement que possible.</li>
+        <li><strong>Une présentation claire et accessible</strong><br>Pas de vocabulaire technique. Je m'assure de présenter les concepts aussi simplement que possible.</li>
         <li><strong>Des mises en situation et des jeux</strong><br>Idéal pour comprendre comment détecter les pièges les plus courants.</li>
-        <li><strong>Un espace de discussion</strong><br>La cybersécurité est un état d'esprit. Les participants le renforcent en partageant leurs expériences et leurs questions.</li>
+        <li><strong>Un espace de discussion</strong><br>La cybersécurité est un état d'esprit. Les participants le renforcent en partageant leurs questionnements et leurs expériences.</li>
       </ol>
     </div>
 
@@ -239,7 +239,7 @@
     <ul>
       <li>Format flexible de 60 à 120 minutes</li>
       <li>En présentiel ou en visioconférence</li>
-      <li>Adapté aux groupes de 5-6 personnes</li>
+      <li>Adapté aux groupes de 5-6 personnes de niveau homogène</li>
     </ul>
 
     <!-- Résultats attendus -->
