--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -122,10 +122,10 @@
 
     <!-- En-tête projet phare -->
     <div style="text-align:center; margin-bottom:18px;">
-      <span class="tag-projet">Projet phare #2 · Formation</span>
+      <span class="tag-projet">Formation</span>
     </div>
 
-    <h1>Formation 101&nbsp;: Comprendre les grands enjeux de la cybersécurité</h1>
+    <h1>Comprendre les grands enjeux de la cybersécurité</h1>
     <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
 
     <p style="font-size:1.05em; line-height:1.7;">
@@ -178,7 +178,7 @@
     <p>
       Le second module s'intéresse en détail aux différentes techniques de hameçonnage, première porte d’entrée des cyberattaques. 
       Il vous permettra d'analyser plusieurs cas, et de tester vos connaissances à l'occasion d'un quizz. 
-      L'objectif de cette section est simple: vous sensibiliser sur les conséquences de vos actions en ligne, et vous inviter à toujours réfléchir avant de cliquer.
+      L'objectif de cette section est simple: vous sensibiliser sur les conséquences d'une action en ligne, et vous inviter à toujours réfléchir avant de cliquer.
     </p>
 
     <p>Dans ce module interactif, nous aborderons les points suivants&nbsp;:</p>
