--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -136,8 +136,7 @@
 
     <p style="font-size:1.05em; line-height:1.7;">
       C’est pour répondre à ces enjeux que je vous propose une formation complète et accessible,
-      construite autour d’un objectif simple&nbsp;: développer une culture de cybersécurité solide,
-      pratique et durable afin de vous aider à mieux vous protéger, au travail comme à la maison.
+      construite autour d’un objectif simple&nbsp;: développer une culture de cybersécurité afin de vous aider à mieux vous protéger, au travail comme à la maison.
     </p>
 
     <!-- Encadré : Objectifs de la formation -->
