--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -160,9 +160,9 @@
     <!-- MODULE 1 -->
     <h3 class="module-titre">MODULE 1 — Etat des lieux: acteurs et enjeux de la cybersécurité en 2025</h3>
 
-    <p>Dans cette première partie, nous dressons un portrait des menaces et des acteurs en présence&nbsp;:</p>
+    <p>Dans cette première partie, nous dressons un portrait des menaces et des acteurs en présence.</p>
     <ul>
-      <li>L'état des menaces en quelques chiffres</li>
+      <li>État des menaces en quelques chiffres</li>
       <li>Pourquoi sommes-nous tous concernés?</li>
       <li>Qui sont les acteurs en présence?</li>
       <li>Qu'est-ce qu'un hacker?</li>
@@ -193,7 +193,6 @@
         </ul>
       </li>
       <li>Décryptage d’exemples réels</li>
-      <li>Exercices ludiques pour repérer les indices suspects</li>
       <li>Jeu (Quizz)&nbsp;: «&nbsp;Saurez-vous reconnaître les tentatives d'hameçonnage&nbsp;?&nbsp;»</li>
       <li>Discussion ouverte&nbsp;: partage d'expériences entre participants</li>
     </ul>
@@ -204,7 +203,7 @@
 
     <p>
       Le troisième et dernier module nous permettra d'aborder différents thèmes pour vous aider à développer votre propre système d’alerte mental, un mélange d’intuition,
-      d’expérience, et de prudence naturelle. Nous évoquerons aussi l'usage d'outils divers pour vous aider à vous proteger.
+      d’expérience, et de prudence naturelle. Nous évoquerons aussi l'usage d'outils spécifiques pour vous aider à vous protéger.
     </p>
 
     <p>Dans ce module, les participants découvriront une liste non exhaustive de bonnes pratiques à intégrer à leur quotidien, 
