--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -248,7 +248,7 @@
         <li>Identifient plus facilement les tentatives de hameçonnage</li>
         <li>Comprennent comment les attaquants manipulent les émotions</li>
         <li>Développent une vigilance naturelle</li>
-        <li>Participent à la sécurité numérique de leur organisation et de leur domicile</li>
+        <li>Participent activement à la sécurité numérique de leur organisation et de leur domicile</li>
       </ul>
       <p><strong>En un mot&nbsp;:</strong> ils deviennent votre première ligne de défense contre les cybercriminels.</p>
     </div>
