--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -144,7 +144,7 @@
       <h3> Objectifs de la formation</h3>
       <ul>
         <li>Faire un état des lieux des menaces cyber en 2025</li>
-        <li>Détecter les signes de hameçonnage et des pièges les plus courants</li>
+        <li>Détecter les signes de hameçonnage et les pièges les plus courants</li>
         <li>Reconnaître les manipulations psychologiques utilisées par les cybercriminels</li>
         <li>Développer des réflexes de vigilance adaptés à la vie personnelle et professionnelle</li>
         <li>Adopter des pratiques simples et efficaces pour se protéger</li>
