--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -160,7 +160,7 @@
     <!-- MODULE 1 -->
     <h3 class="module-titre">MODULE 1 — Etat des lieux: acteurs et enjeux de la cybersécurité en 2025</h3>
 
-    <p>Dans cette première partie, nous dressons un portrait des menaces et des acteurs en présence.</p>
+    <p>Dans cette première partie, nous dresserons un portrait des menaces et des acteurs en présence.</p>
     <ul>
       <li>État des menaces en quelques chiffres</li>
       <li>Pourquoi sommes-nous tous concernés?</li>
@@ -175,7 +175,7 @@
     <h3 class="module-titre">MODULE 2 — Initiation au hameçonnage (phishing) et autres techniques d'ingénierie sociale</h3>
 
     <p>
-      Le second module s'intéresse en détail aux différentes techniques de hameçonnage, première porte d’entrée des cyberattaques. 
+      Le second module s'intéressera en détail aux différentes techniques de hameçonnage, première porte d’entrée des cyberattaques. 
       Il vous permettra d'analyser plusieurs cas, et de tester vos connaissances à l'occasion d'un quizz. 
       L'objectif de cette section est simple: vous sensibiliser sur les conséquences d'une action en ligne, et vous inviter à toujours réfléchir avant de cliquer.
     </p>
