--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -252,7 +252,9 @@
       </ul>
       <p><strong>En un mot&nbsp;:</strong> ils deviennent votre première ligne de défense contre les cybercriminels.</p>
     </div>
-
+    <a class="return-link" href="/portfolio/">
+      ← Retour à l'accueil
+    </a>
   </section>
 </body>
 </html>
