--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -587,11 +587,10 @@
         ✉️ Me contacter : contact@sqltemp.com
       </a>
     </div>
-    <div style="text-align:center; margin-top:20px;">
-      <a href="/portfolio/" class="btn"
-         style="color:#3fb950; text-decoration:none; font-weight:600;">
-        ← Retour à l'accueil
-      </a>
+    <div style="text-align:left; margin-top:20px;">
+    <a class="return-link" href="/portfolio/">
+      ← Retour à l'accueil
+    </a>
     </div>
   </section>
   <!-- ===== FIN SECTION 7 ===== -->
