--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -125,7 +125,7 @@
       <span class="tag-projet">Formation</span>
     </div>
 
-    <h1>Comprendre les grands enjeux de la cybersécurité</h1>
+    <h1>Introduction à la cybersécurité & défense contre les attaques par hameçonnage</h1>
     <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
 
     <p style="font-size:1.05em; line-height:1.7;">
