--- a/pages/ressources.html
+++ b/pages/ressources.html
@@ -169,7 +169,7 @@
           </article>
           <article class="linkcard" data-tags="virustotal malware url hash threat-intel">
             <h4><a href="https://www.virustotal.com/" target="_blank" rel="noopener">VirusTotal</a></h4>
-            <p>Analyse multi‑antivirus de fichiers/URLs ; indicateurs, détections, partages.</p>
+            <p>Analyse multi‑antivirus de fichiers/URLs ; indicateurs, détections, partage.</p>
             <div class="meta"><span class="tag">Malware</span><span class="tag">IOC</span></div>
           </article>
           <article class="linkcard" data-tags="mitre att&ck ttp matrice menaces">
