--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -588,7 +588,7 @@
       </a>
     </div>
     <div style="text-align:left; margin-top:20px;">
-    <a class="return-link" href="/portfolio/">
+    <a class="return-link" href="/">
       ← Retour à l'accueil
     </a>
     </div>
