--- a/pages/ressources.html
+++ b/pages/ressources.html
@@ -311,5 +311,8 @@
     // Lance un premier rendu
     applyFilters();
   </script>
+  <a class="return-link" href="/">
+    ← Retour à l'accueil
+  </a>
 </body>
 </html>
