--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -43,6 +43,7 @@
 </head>
 
 <body style="margin:0; background:#0b0b0b; color:#e5e7eb; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial;">
+<div id="top"></div>
 
 <main>
 
@@ -62,7 +63,11 @@
 
   </section>
   <!-- ===== FIN ENTÊTE ===== -->
-
+  <p style="text-align:left; margin-top:20px;">
+    <a class="return-link" href="/">
+      ← Retour à l'accueil
+    </a>
+  </p>  
   <!-- ===== INTRODUCTION ===== -->
   <section class="terminal-section" id="intro-pme"
            style="text-align:left; margin:24px auto; max-width:900px; background-color:#0d0d0d;
@@ -583,20 +588,16 @@
 
   </section>
   <!-- ===== FIN SECTION 7 ===== -->
-  <div style="text-align:center; margin-top:24px;">
-    <a href="mailto:contact@sqltemp.com"
-       class="btn"
-       style="display:inline-block; margin-top:auto; padding:6px 10px; background-color:#3fb950; color:#ffffff; text-decoration:none; border-radius:4px; font-weight:bold;">
-      ✉️ Me contacter : contact@sqltemp.com
-    </a>
-  </div>
-  <div style="text-align:left; margin-top:20px;">
-    <a class="return-link" href="/">
-      ← Retour à l'accueil
-    </a>
-  </div>
+  
+  <section class="terminal-section" id="contact" style="text-align:left; margin: 0 auto; padding: 40px 20px;">
+  <p style="text-align:left; line-height:1.6; font-size:1.1em;">
+    ✉️ <strong>Me contacter</strong> : <a href="mailto:contact@sqltemp.com">contact@sqltemp.com</a><br />
+  </p>
+  
+</section>
 
 </main>
+<a href="#top" class="back-to-top">↑ Retour en haut</a>
 
 </body>
 </html>
