--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -60,14 +60,14 @@
       Comment aider les petites et moyennes entreprises à bâtir un programme de cybersécurité réaliste,
       efficace, adapté à leurs moyens.
     </p>
-
+    <p style="text-align:center; margin-top:20px;">
+      <a class="return-link" href="/">
+        ← Retour à l'accueil
+      </a>
+    </p>  
   </section>
   <!-- ===== FIN ENTÊTE ===== -->
-  <p style="text-align:left; margin-top:20px;">
-    <a class="return-link" href="/">
-      ← Retour à l'accueil
-    </a>
-  </p>  
+
   <!-- ===== INTRODUCTION ===== -->
   <section class="terminal-section" id="intro-pme"
            style="text-align:left; margin:24px auto; max-width:900px; background-color:#0d0d0d;
@@ -585,19 +585,17 @@
       </a>
     </div>
     -->
-
+    <p style="text-align:center; line-height:1.6; font-size:1.1em;">
+      ✉️ <strong>Me contacter</strong> : <a href="mailto:contact@sqltemp.com">contact@sqltemp.com</a><br />
+    </p>
+    <p style="text-align:center; line-height:1.6; font-size:1.1em;">
+      <a href="#top" class="back-to-top">↑ Retour en haut</a>
+    </p>
   </section>
   <!-- ===== FIN SECTION 7 ===== -->
   
-  <section class="terminal-section" id="contact" style="text-align:left; margin: 0 auto; padding: 40px 20px;">
-  <p style="text-align:left; line-height:1.6; font-size:1.1em;">
-    ✉️ <strong>Me contacter</strong> : <a href="mailto:contact@sqltemp.com">contact@sqltemp.com</a><br />
-  </p>
-  
-</section>
-
 </main>
-<a href="#top" class="back-to-top">↑ Retour en haut</a>
+
 
 </body>
 </html>
