--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -124,7 +124,11 @@
     <div style="text-align:center; margin-bottom:18px;">
       <span class="tag-projet">Formation</span>
     </div>
-
+    <p style="text-align:right; margin-top:20px;">
+      <a class="return-link" href="/">
+        ← Retour à l'accueil
+      </a>
+    </p>  
     <h1>Introduction à la cybersécurité & défense contre les attaques par hameçonnage</h1>
     <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
 
@@ -252,9 +256,9 @@
       </ul>
       <p><strong>En un mot&nbsp;:</strong> ils deviennent votre première ligne de défense contre les cybercriminels.</p>
     </div>
-    <a class="return-link" href="/">
-      ← Retour à l'accueil
-    </a>
+    <p style="text-align:center; line-height:1.6; font-size:1.1em;">
+      <a href="#top" class="back-to-top">↑ Retour en haut</a>
+    </p>
   </section>
 </body>
 </html>
