--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -124,14 +124,16 @@
     <div style="text-align:center; margin-bottom:18px;">
       <span class="tag-projet">Formation</span>
     </div>
-    <p style="text-align:right; margin-top:20px;">
+
+    <h1>Introduction à la cybersécurité & défense contre les attaques par hameçonnage</h1>
+    <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
+
+    <p style="text-align:center; margin-top:20px;">
       <a class="return-link" href="/">
         ← Retour à l'accueil
       </a>
     </p>  
-    <h1>Introduction à la cybersécurité & défense contre les attaques par hameçonnage</h1>
-    <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
-
+    
     <p style="font-size:1.05em; line-height:1.7;">
       La cybersécurité n’est plus, depuis plusieurs années, un sujet exclusivement réservé aux salons et conférences d'experts. En 2025, les menaces se sont plus que jamais professionnalisées,
       automatisées et industrialisées. Les PME, les particuliers, les organisations publiques comme privées sont ciblées quotidiennement
