--- a/pages/ressources.html
+++ b/pages/ressources.html
@@ -87,6 +87,7 @@
   </style>
 </head>
 <body>
+  <div id="top"></div>
   <div class="wrap">
     <header>
       <h1>📚 Bibliothèque de ressources</h1>
@@ -273,6 +274,9 @@
     </div>
 
     <p class="footnote">Astuce : appuie sur <span class="kbd">/</span> pour placer le curseur dans la recherche.</p>
+    <p style="text-align:center; line-height:1.6; font-size:1.1em;">
+      <a href="#top" class="back-to-top">↑ Retour en haut</a>
+    </p>
 
   </div>
 
